[package]
name = "signatures"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "signatures"

[features]
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"

[patch.crates-io]
ahash = { git = "https://github.com/tkaitchuck/ahash", rev = "db36e4c4f0606b786bc617eefaffbe4ae9100762" }
